fixed alignment for admin page

--- a/public/src/Pages/AdminPage.module.css
+++ b/public/src/Pages/AdminPage.module.css
@@ -1,12 +1,30 @@
 .container {
 	display: flex;
-	/* background-image: url("https://c.pxhere.com/images/52/47/a2047ea538688d7b3d3bfabe3ce7-1447929.jpg!d"); */
+	justify-content: center;
+	align-items: center;
 	background-image: url(../../public/icons/image-from-rawpixel-id-3322383-jpeg.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
 	height: 100vh;
 	width: 100vw;
 }
+
+/*playing with background look*/
+/* .container {
+	background-color: #4f8a8a;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 90vw;
+	height: 90vh;
+	border-radius: 50%;
+	box-shadow: inset 0 0 50px #fff,  inner white  inset 20px 0 80px #f0f,
+		 inner left magenta short  inset -20px 0 80px #0ff,
+		 inner right cyan short  inset 20px 0 300px #f0f,
+		 inner left magenta broad  inset -20px 0 300px #0ff,
+		 inner right cyan broad 0 0 50px #fff, outer white  -10px 0 80px #f0f,
+		 outer left magenta  10px 0 80px #0ff; outer right cyan
+} */
 
 .innerContainer {
 	display: flex;
