--- a/public/src/components/AnnouncementBanner.module.css
+++ b/public/src/components/AnnouncementBanner.module.css
@@ -59,8 +59,7 @@
 	width: 100%;
 	/* background-color: rgb(25, 68, 68); */
 	background-color:/* #18323d*/ #366579;
-	box-shadow: inset 0 0 20px 10px rgb(196, 239, 245),
-		/* inner white  inset 0 0 60px #f0f,*/ /* middle magenta */ inset 0 0 90px #03cafc; /* outer cyan */
+	box-shadow: inset 0 0 20px 10px rgb(196, 239, 245), inset 0 0 90px #03cafc;
 }
 
 .carouselItem h2 {
